test/reusable/error/eval_selmem_child1.bfr
// parent:child のchildがindexである

main {
  a: array(3) {
    i: index;
  };
} [
  + a:i
]